--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ngx-translate/http-loader": "^7.0.0",
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.10.0",
     "ngx-toastr": "^16.1.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
