--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ngx-translate/core": "^14.0.0",
     "@ngx-translate/http-loader": "^7.0.0",
     "@popperjs/core": "^2.11.6",
+    "@swimlane/ngx-charts": "^20.1.2",
     "angular-font-awesome": "^3.1.2",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.0",
