--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "ngx-mat-timepicker": "^15.1.6",
     "ngx-toastr": "^16.1.1",
     "rxjs": "~7.8.0",
+    "swiper": "^9.2.4",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
